# tenda

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
database/: Cargo.toml  build.gradle.kts
database/src/commonMain/kotlin/com/tenda/database/: DatabaseModule.kt
database/src/commonMain/kotlin/com/tenda/database/exception/: ExceptionHandler.kt
database/src/commonMain/kotlin/com/tenda/database/mapper/: Argument.kt
database/src/commonMain/kotlin/com/tenda/database/model/: ExceptionModel.kt  ResponseModel.kt
database/src/commonMain/kotlin/com/tenda/database/repository/: PersistenceRepositoryDelegate.kt
database/src/commonMain/rust/: lib.rs
database/src/commonMain/rust/datasource/: mod.rs  persistence.rs  persistence_delegate.rs
database/src/commonMain/rust/datasource/delegate/: persistence.rs
database/src/commonMain/rust/exception/: exception.rs  mod.rs  persistence_error.rs  persistence_exception.rs  throwable.rs
database/src/commonMain/rust/extension/: mod.rs  persistence_query.rs
database/src/commonMain/rust/mapper/: entry.rs  json_mapper.rs  mod.rs
database/src/commonMain/rust/model/: credential.rs  entry.rs  mod.rs
database/src/commonTest/kotlin/com/tenda/database/faker/: FakePersistence.kt
database/src/commonTest/kotlin/com/tenda/database/mock/: FakePersistence.kt
database/src/commonTest/kotlin/com/tenda/database/repository/: PersistenceRepositoryDelegateTest.kt
database/src/iosSimulatorArm64Main/kotlin/uniffi/database/: database.common.iosSimulatorArm64.kt
gradle/: common.gradle  (+1 more)
(+103 files in other folders)
