[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
uniffi = "0.29.4"
libsql = { git = "https://github.com/tursodatabase/libsql", branch = "main" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"
