[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
uniffi = "0.29.4"
libsql = { version = "*", features = ["core", "replication", "remote"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
hyper-rustls = { version = "0.24", features = ["webpki-roots"] }

[lib]
crate-type = ["cdylib", "staticlib"]
path = "src/commonMain/rust/lib.rs"
